--- a/Report Format Latex/fastpass-final-proposol.tex
+++ b/Report Format Latex/fastpass-final-proposol.tex
@@ -2,6 +2,9 @@
 %%%%%% xelatex grad-sample.tex 
 %%%%%% for a few times to generate the output pdf file
 \documentclass[12pt,oneside,openright,a4paper]{cpe-thai-project}
+\usepackage{indentfirst}
+\setlength{\parindent}{1cm}
+
 
 
 \usepackage{polyglossia}
@@ -23,7 +26,7 @@
 % Second line of title
 %\def\disstitletwo{Project/Indep title line 2 (optional)}   
 % Your first name and lastname
-\def\dissauthor{ นายกันต์ดนัย ศรีวัฒนะ\qquad65070507203}   % 1st member
+\def\dissauthor{นายกันต์ดนัย ศรีวัฒนะ\qquad65070507203}   % 1st member
 %%% Put other group member names here ..
 \def\dissauthortwo{นายอัษฎาวุธ โหมดเทศ\qquad65070507228}   % 2nd member (optional)
 \def\dissauthorthree{นายบุรินทร์ ราชกิจจา\qquad65070507235}   % 3rd member (optional)
@@ -65,13 +68,14 @@
 \def\thaiworktype{ปริญญานิพนธ์} %  Project or research project % 
 \def\thaidisstitleone{หัวข้อปริญญานิพนธ์บรรทัดแรก}
 \def\thaidisstitletwo{หัวข้อปริญญานิพนธ์บรรทัดสอง}
-\def\thaidissauthor{นายสมศักดิ์ คอมพิวเตอร์}
-\def\thaidissauthortwo{นางสาวสมศรี คอมพิวเตอร์2} %Optional
-\def\thaidissauthorthree{นางสาวสมปอง คอมพิวเตอร์3} %Optional
+\def\thaidissauthor{นายกันต์ดนัย ศรีวัฒนะ}
+\def\thaidissauthortwo{นายอัษฎาวุธ โหมดเทศ} %Optional
+\def\thaidissauthorthree{นายบุรินทร์ ราชกิจจา} %Optional
+\def\thaidissauthorfour{นายสหสวรรษ ศรีแจ่มใส} %Optional
 
-\def\thaidissadvisor{รศ.ดร.ที่ปรึกษา วิทยานิพนธ์}
+\def\thaidissadvisor{ดร.ประพงษ์ ปรีชาประพาฬวงศ์}
 %% Leave this empty if you have no co-advisor
-\def\thaidisscoadvisor{รศ.ดร.ที่ปรึกษา วิทยานิพนธ์ร่วม} %Optional
+\def\thaidisscoadvisor{} %Optional
 \def\thaidisscoadvisortwo{}% Co-advisor 2 (if any)
 \def\thaidisscoadvisorthree{} % Co-advisor 3 (You better be building space rocket or curing cancer at this point)
 \def\thaidissdegree{วิศวกรรมศาสตรบัณฑิต}
@@ -163,13 +167,14 @@ In a multihop ad hoc network, the interference among nodes is
 % \thaifont
 \thaiabstract
 
-เซ็นเซอร์ เอ็กซ์เพรสรองรับคอนเซปต์สหัสวรรษเมจิก อิ่มแปร้ เฟรชชี่ ชาร์ปเช็งเม้งคลาสสิก แพตเทิร์น แอลมอนด์ เพลซว้อยก๊วน ซาร์ดีนซี้เนิร์สเซอรีอีสต์ สเตเดียมเพียบแปร้โอ้ยแคมปัส จัมโบ้ช็อตแมคเคอเรลอึ๋ม สตริง แมกกาซีนสตริงผ้าห่ม ฮัลโหล ยิม รอยัลตี้
+ปัจจุบันผู้ใช้งานในพื้นที่ต่าง ๆ เช่น สถานที่ราชการ ห้างสรรพสินค้า และพื้นที่บริการทั่วไป มักพบปัญหาความยุ่งยากในการค้นหาที่จอดรถ เนื่องจากขาดข้อมูลสถานะที่จอดรถที่ชัดเจนและระบบจัดการที่ตอบสนองได้อย่างรวดเร็ว ส่งผลให้เสียเวลาและสร้างความไม่สะดวกในการเข้าใช้พื้นที่ โครงงานนี้นำเสนอระบบศูนย์กลางจัดการที่จอดรถอัจฉริยะ FastPass ซึ่งออกแบบมาเพื่อให้การค้นหา ตรวจสอบสถานะที่จอดรถแบบเรียลไทม์ และการจองพื้นที่เป็นไปอย่างง่ายและทันที ระบบรองรับการขยายตัวและสามารถเชื่อมต่อกับบริการอัตโนมัติต่าง ๆ เช่น ระบบตรวจจับป้ายทะเบียนรถ เพื่อให้กระบวนการเข้า–ออกพื้นที่เป็นไปอย่างราบรื่นและลดขั้นตอนที่ไม่จำเป็น
+[ผลลัพธ์อยู่ในระหว่างรอดำเนินงาน]
 
 \begin{flushleft}
 \begin{tabular*}{\textwidth}{@{}lp{0.8\textwidth}}
  & \\
 
-\textbf{คำสำคัญ}: & การชุบเคลือบด้วยไฟฟ้า / การชุบเคลือบผิวเหล็ก /  เคลือบผิวรังสี
+\textbf{คำสำคัญ}: &ระบบที่จอดรถอัจฉริยะ / ระบบจองที่จอดรถ / การจัดการที่จอดรถแบบเรียลไทม์ / ระบบอัตโนมัติ / FastPass
 \end{tabular*}
 \end{flushleft}
 \endabstract
@@ -228,39 +233,30 @@ MANET & Mobile Ad Hoc Network
 \emph{หัวข้อต่าง ๆ ในแต่ละบทเป็นเพียงตัวอย่างเท่านั้น หัวข้อที่จะใส่ในแต่ละบทขึ้นอยู่กับโปรเจคของนักศึกษาและอาจารย์ที่ปรึกษา}
 
 \section{ที่มาและความสำคัญ}
+เนื่องจากปัจจุบันในสังคมมีการใช้รถยนต์ในการโดยสารจำนวนมาก ผู้คนอาจต้องเจอกับปัญหาคือการเสียเวลาในการหาที่จอดรถในช่วงเวลาเร่งด่วน ส่งผลทำให้เข้างานหรือเข้าเรียนสาย แถมยังส่งผลต่อโอกาสในการทำงานและหน้าที่การงานเสียหายได้ นอกจากนี้ความไม่แน่นอนว่าจะมีที่จอดรถหรือไม่ ทำก่อให้เกิดความไม่สบายใจตั้งแต่ก่อนออกจากบ้านหรือระหว่างเดินทาง คนที่ใช้รถยนต์มีความกังวลเพราะไม่มั่นใจว่าจะหาที่จอดได้ทันเวลาเมื่อถึงสถานที่ทำงานหรือมหาวิทยาลัย การวนหาที่จอดซ้ำๆ สร้างไม่พอใจเป็นอย่างมากและทำให้เสียพลังงานโดยไม่จำเป็น และในบางครั้งต้องจอดไกลจากอาคารที่ทำงานหรืออาคารเรียน ทำให้ต้องเสียเวลาเดินเพิ่มและไม่สะดวกสบาย นอกจากนี้ยังมีปัญหาที่บุคคลภายนอกเข้ามาใช้พื้นที่จอดร่วมกันโดยไม่มีการแบ่งโซนชัดเจน ส่วนใหญ่มักต้องการที่จอดใกล้อาคารเพื่อความสะดวก แต่เมื่อไม่มีการจัดการที่ดีทำให้เกิดการแย่งพื้นที่ระหว่างบุคคลภายนอกและพนักงานประจำและกีดขวางทางเดินรถ นอกจากนี้ยังมี ผู้มาติดต่อราชการ ผู้รับเหมา หรือผู้มาใช้พื้นที่ บุคคลภายนอกเหล่านี้บางครั้งเข้ามาใช้พื้นที่จอดโดยไม่มีการควบคุมหรือจำกัดสิทธิ์ ส่งผลให้จำนวนที่จอดลดลงไปอีกและสร้างความไม่พอใจให้กับผู้ใช้งานหลักเช่น เจ้าหน้าที่และพนักงานประจำ การที่ผู้ใช้หลายกลุ่มมาใช้พื้นที่ร่วมกันโดยไร้การจัดการที่เป็นระบบ ทำให้เกิดปัญหาขึ้นได้ แถามอาจทำพนักงานประจำรู้สึกโดนเอาเปรียบเพราะโอกาสหาที่จอดน้อยลง ทั้งที่มีความจำเป็นต้องใช้เพื่อเข้าทำงานตรงเวลา เพราะเมื่อหาที่จอดไม่ได้ทำให้กระทบต่อการทำงาน อีกหนึ่งปัญหาที่พบได้บ่อยในที่จอดรถห้างสรรพสินค้าคือ การใช้แสตมป์สัญลักษณ์ เพื่อยืนยันสิทธิ์จอดฟรีหรือขยายเวลาจอดในห้างสรรพสินค้าหรือสถานที่ราชการ ซึ่งจะช่วยลดค่าใช้จ่ายให้ผู้มาใช้บริการ แต่กลับทำให้เกิดความล่าช้าและความไม่สะดวก เช่น ต้องเสียเวลาต่อคิวเพื่อรับการแสตมป์ ต้องเดินไปกลับระหว่างจุดบริการกับลานจอด แถมยังต้องยืนให้บุคคลทางออกตรวจสอบสิทธิ์ให้อีกซึ่งเพิ่มความไม่สะดวกสบาย ส่งผลให้ระบบแบบนี้ไม่ตอบสนองต่อผู้ใช้งานในปัจจุบันที่ต้องการความสะดวก รวดเร็ว และยืดหยุ่น
+\vspace{0.3cm}
 
-ตัวอย่างการใส่อ้างอิงที่มา -> \cite{hypersense} ถ้าต้องการใส่แหล่งอ้างอิงมากกว่า 1 ให้ทำดังนี้ -> \cite{hypersense,bworld} มนุษย์มีความสามารถในการประดิษฐ์คิดค้น มาตั้งแต่สมัยโบราณ ย้อนกลับไปตั้งแต่สมัยยุคปฏิวัติอุตสาหกรรม ที่มนุษย์ได้คิดค้นเครื่องจักรไอน้ำขึ้นมาแล้ว เพื่อเป็นเครื่องทุ่นแรงในการผลิตสิ่งต่างๆ กาลเวลาผ่านพลังไอน้ำก็แปรเปลี่ยนเป็นพลังงานไฟฟ้า จนต่อมาก็ได้มีสิ่งประดิษฐ์ที่พลิกประวัติศาสตร์โลกเกิดขึ้น นั่นก็คือเครื่องคอมพิวเตอร์ การมาของคอมพิวเตอร์นั่นช่วยให้เครื่องจักรสามารถควบคุมแบบอัตโนมัติได้ แม้คอมพิวเตอร์จะมีประโยชน์เป็นอย่างมาก แต่ก็ปฏิเสธไม่ได้ว่าบางอย่างการควบคุมโดย มนุษย์นั้นมีความจำเป็นมากกว่า ซึ่งในปัจจุบันการควบคุมคอมพิวเตอร์ของมนุษย์ ไม่ได้ใช้อวัยวะเพียงแค่มือสองมือ แต่ยังมีการนำอวัยวะอื่นภายในร่างกายมาใช้ควบคุมคอมพิวเตอร์ด้วย ยกตัวอย่างเช่น Amazon Alexa เป็นลำโพงที่เราสามารถออกคำสั่งเสียงเพื่อควบคุมการทำงานต่างๆ ไม่ว่าจะเป็น การตั้งเวลา, สร้างกิจกรรมในปฏิทิน, การแจ้งเตือน, การตรวจเช็คข่าวหรือแม้กระทั่งการสั่งการให้ เปิด-ปิด หลอดไฟภายในห้องได้ อีกทั้งยังมี Kinect Xbox ที่เป็นอุปกรณ์ที่ใช้ตรวจจับการเคลื่อนไหวแล้วนำไปควบคุมตัวละครภายในวีดีโอเกม จนทำให้เกิดความคิดที่จะใช้สมองควบคุมคอมพิวเตอร์โดยตรง โดยหวังผลให้เกิดประสิทธิภาพที่ดีขึ้นกว่าการใช้อวัยวะในการควบคุม จึงเป็นจุดเริ่มต้นของการจินตนาการการเคลื่อนไหว (Motor Imagery) ซึ่งเป็นการจินตนาการว่าเราต้องการจะทำอะไร โดยที่เราไม่ได้ทำสิ่งนั้นจริง เมื่อเราจินตนาการสมองของเราจะส่งสัญญาณคลื่นไฟฟ้าสมองออกมา ซึ่งสามารถตรวจวัดได้ด้วยเครื่องวัดสัญญาณไฟฟ้าสมอง (EEG) 
-แต่ด้วยความยุ่งยากของอุปกรณ์เครื่องวัดสัญญาณคลื่นไฟฟ้าสมองและมีค่าใช้จ่ายที่ค่อนข้างสูง ทางกลุ่มเราจึงเล็งเห็นว่า อยากที่จะพัฒนาอุปกรณ์เครื่องวัดสัญญาณคลื่นไฟฟ้าสมอง (EEG) โดยมีการลดจำนวนขั้ววัดสัญญาณคลื่นไฟฟ้าสมองให้น้อยลง และมีการพัฒนาการแยกประเภทของสัญญาณให้ดีขึ้น เพื่อการทำงานและควบคุมได้หลากหลายรูปแบบขึ้น ตามอุปกรณ์เครื่องวัดสัญญาณคลื่นไฟฟ้าสมองที่เราใช้ หากผลงานเสร็จสมบูรณ์ จะช่วยให้ผู้คนสามารถเข้าถึงและใช้ง่ายอุปกรณ์เครื่องวัดสัญญาณคลื่นไฟฟ้าสมองได้ง่ายขึ้น จากการที่ความยุ่งยากและค่าใช้จ่ายที่ของอุปกรณ์ลดลง และสามารถนำไปประยุกต์ใช้ในการใช้งานต่างๆได้ เช่น การฟื้นฟูสมรรถภาพทางสมองสำหรับนักกีฬา, การฟื้นฟูสมรรถภาพในผู้ป่วยที่ได้รับผลกระทบจากโรคหลอดเลือดสมอง, การควบคุมอุปกรณ์ช่วยเหลือสำหรับผู้พิการ หรือการเล่นเกมส์ เป็นต้น
+จากที่กล่าวมาข้างต้น กลุ่มของพวกเราจึงเกิดแนวคิดพัฒนาระบบที่จอดรถแบบเรียลไทม์และปรับปรุงระบบมอบสิทธิพิเศษแก่ผู้มาใช้งานที่สะดวกมากยิงขึ้น และแก้การใช้แสตมป์เพื่อเพิ่มเวลาจอดรถฟรีแบบเดิมๆ เพื่อช่วยให้วางแผนการเดินทางได้ดีขึ้น ลดความกังวลและความเครียดจากการหาที่จอด เมื่อมีระบบจัดการที่มีประสิทธิภาพ จะสามารถใช้เวลาได้คุ้มค่ามากขึ้นและใช้ชีวิตได้อย่างเต็มที่
+
+
+%%%%%%%%%%%%%%%%%%%%% ตัวอย่าง %%%%%%%%%%%%%%%%%%%%%
+%ตัวอย่างการใส่อ้างอิงที่มา -> \cite{hypersense} ถ้าต้องการใส่แหล่งอ้างอิงมากกว่า 1 ให้ทำดังนี้ -> \cite{hypersense,bworld} มนุษย์มีความสามารถในการประดิษฐ์คิดค้น มาตั้งแต่สมัยโบราณ ย้อนกลับไปตั้งแต่สมัยยุคปฏิวัติอุตสาหกรรม ที่มนุษย์ได้คิดค้นเครื่องจักรไอน้ำขึ้นมาแล้ว เพื่อเป็นเครื่องทุ่นแรงในการผลิตสิ่งต่างๆ กาลเวลาผ่านพลังไอน้ำก็แปรเปลี่ยนเป็นพลังงานไฟฟ้า จนต่อมาก็ได้มีสิ่งประดิษฐ์ที่พลิกประวัติศาสตร์โลกเกิดขึ้น นั่นก็คือเครื่องคอมพิวเตอร์ การมาของคอมพิวเตอร์นั่นช่วยให้เครื่องจักรสามารถควบคุมแบบอัตโนมัติได้ แม้คอมพิวเตอร์จะมีประโยชน์เป็นอย่างมาก แต่ก็ปฏิเสธไม่ได้ว่าบางอย่างการควบคุมโดย มนุษย์นั้นมีความจำเป็นมากกว่า ซึ่งในปัจจุบันการควบคุมคอมพิวเตอร์ของมนุษย์ ไม่ได้ใช้อวัยวะเพียงแค่มือสองมือ แต่ยังมีการนำอวัยวะอื่นภายในร่างกายมาใช้ควบคุมคอมพิวเตอร์ด้วย ยกตัวอย่างเช่น Amazon Alexa เป็นลำโพงที่เราสามารถออกคำสั่งเสียงเพื่อควบคุมการทำงานต่างๆ ไม่ว่าจะเป็น การตั้งเวลา, สร้างกิจกรรมในปฏิทิน, การแจ้งเตือน, การตรวจเช็คข่าวหรือแม้กระทั่งการสั่งการให้ เปิด-ปิด หลอดไฟภายในห้องได้ อีกทั้งยังมี Kinect Xbox ที่เป็นอุปกรณ์ที่ใช้ตรวจจับการเคลื่อนไหวแล้วนำไปควบคุมตัวละครภายในวีดีโอเกม จนทำให้เกิดความคิดที่จะใช้สมองควบคุมคอมพิวเตอร์โดยตรง โดยหวังผลให้เกิดประสิทธิภาพที่ดีขึ้นกว่าการใช้อวัยวะในการควบคุม จึงเป็นจุดเริ่มต้นของการจินตนาการการเคลื่อนไหว (Motor Imagery) ซึ่งเป็นการจินตนาการว่าเราต้องการจะทำอะไร โดยที่เราไม่ได้ทำสิ่งนั้นจริง เมื่อเราจินตนาการสมองของเราจะส่งสัญญาณคลื่นไฟฟ้าสมองออกมา ซึ่งสามารถตรวจวัดได้ด้วยเครื่องวัดสัญญาณไฟฟ้าสมอง (EEG) 
+%แต่ด้วยความยุ่งยากของอุปกรณ์เครื่องวัดสัญญาณคลื่นไฟฟ้าสมองและมีค่าใช้จ่ายที่ค่อนข้างสูง ทางกลุ่มเราจึงเล็งเห็นว่า อยากที่จะพัฒนาอุปกรณ์เครื่องวัดสัญญาณคลื่นไฟฟ้าสมอง (EEG) โดยมีการลดจำนวนขั้ววัดสัญญาณคลื่นไฟฟ้าสมองให้น้อยลง และมีการพัฒนาการแยกประเภทของสัญญาณให้ดีขึ้น เพื่อการทำงานและควบคุมได้หลากหลายรูปแบบขึ้น ตามอุปกรณ์เครื่องวัดสัญญาณคลื่นไฟฟ้าสมองที่เราใช้ หากผลงานเสร็จสมบูรณ์ จะช่วยให้ผู้คนสามารถเข้าถึงและใช้ง่ายอุปกรณ์เครื่องวัดสัญญาณคลื่นไฟฟ้าสมองได้ง่ายขึ้น จากการที่ความยุ่งยากและค่าใช้จ่ายที่ของอุปกรณ์ลดลง และสามารถนำไปประยุกต์ใช้ในการใช้งานต่างๆได้ เช่น การฟื้นฟูสมรรถภาพทางสมองสำหรับนักกีฬา, การฟื้นฟูสมรรถภาพในผู้ป่วยที่ได้รับผลกระทบจากโรคหลอดเลือดสมอง, การควบคุมอุปกรณ์ช่วยเหลือสำหรับผู้พิการ หรือการเล่นเกมส์ เป็นต้น
 %
 %\url{http://www.cpe.kmutt.ac.th}
 
 
-วิธีการใส่ลิ้งค์จากเว็บไซต์ ->
-\href{http://www.cpe.kmutt.ac.th} {http://www.cpe.kmutt.ac.th}
-
-\cite{bworld}
-
-\begin{figure}[!h]
-\centering
-\fbox{\includegraphics[width=10cm]{./chart-figure-5.png}}
-\caption{This is the figure x1 ทดสอบ จาก \href{https://www.google.com} {https://www.google.com}}\label{fig:x1}
-\end{figure}
-
-
-Explain the motivations of your works.  
-\begin{itemize}
-\item   What are the problems you are addressing? 
-\item  Why they are important?
-\item  What are the limitations of existing approaches? 
-\end{itemize}
-You may combine this section with the background section.
-
-
+%วิธีการใส่ลิ้งค์จากเว็บไซต์ ->
+%\href{http://www.cpe.kmutt.ac.th} {http://www.cpe.kmutt.ac.th}
 
 \section{วัตถุประสงค์}
-
-ระบุสิ่งท่ี่จะทำในโครงการ ซึ่งจะใช้สำหรับการประเมินว่าโครงงานทำสำเร็จหรือไม่ 
-
+ระบุสิ่งที่จะทำในโครงการ ซึ่งจะใช้สำหรับการประเมินว่าโครงงานทำสำเร็จหรือไม่
+\begin{itemize}
+    \item เพื่อศึกษาและจับจุดสำคัญของข้อมูลภายในเรซูเมของนักศึกษากลุ่มเป้าหมาย
+    \item เพื่อพัฒนาโมเดลปัญญาประดิษฐ์สำหรับวิเคราะห์ข้อมูลเรซูเมของนักศึกษาออกมาเป็นอาชีพที่เหมาะสมกับตัวนักศึกษาได้
+    \item เพื่อพัฒนาเว็บแอปพลิเคชันสำหรับนำมาใช้เป็นตัวกลางในการใช้งานปัญญาประดิษฐ์ เป็นชุมชนและตัวช่วยด้านการพัฒนาตนเองของกลุ่มเป้าหมายได้
+    \item เพื่อลดปัญหาการค้นหาสิ่งที่เหมาะสมและพัฒนาตนเอง ช่วยเหลือการปรับข้อมูลเรซูเม และเป็นชุมชนแก่นักศึกษาในอนาคต
+\end{itemize}
 \section{ขอบเขตของโครงงาน}
 
 Explain the scope of your works. 
@@ -418,11 +414,11 @@ Explain the design (how you plan to implement your work) of your project. Adjust
     \hline
     Use Case Name & จองที่จอดรถ \\
     \hline
-    Actor & บุคลากร (Staff) / ผู้มาติดต่อ (Visitor) \\
+    Actor & บุคลากร (Staff) / ผู้มาติดต่อ (Visitor) / ผู้ใช้งานทั่วไป (User) \\
     \hline
     Goal & เพื่อทำการจองช่องจอดรถล่วงหน้าสำหรับการใช้งาน \\
     \hline
-    Precondition & ผู้ใช้งานต้องเข้าสู่ระบบ (Login) เรียบร้อยแล้ว และเป็นบุคลากร (Staff) / ผู้มาติดต่อ (Visitor) \\
+    Precondition & ผู้ใช้งานต้องเข้าสู่ระบบ (Login) เรียบร้อยแล้ว และเป็นบุคลากร (Staff) / ผู้มาติดต่อ (Visitor)  / ผู้ใช้งานทั่วไป (User) \\
     \hline
     Main success scenario & 
     \vspace{-0.5em} 
@@ -468,7 +464,7 @@ Explain the design (how you plan to implement your work) of your project. Adjust
     \hline
     Use Case Name & บันทึกส่วนลดค่าจอดรถ (Record Parking Discount) \\
     \hline
-    Actor & บุคลากร (Staff) / ผู้มาติดต่อ (Visitor) \\
+    Actor & บุคลากร (Staff) / ผู้มาติดต่อ (Visitor) /  / ผู้ใช้งานทั่วไป (User) / บุคคลภายนอก (Guest) \\
     \hline
     Goal & เพื่อบันทึกสิทธิ์ส่วนลดค่าจอดรถจากการใช้บริการร้านค้าหรือโปรโมชันต่างๆ \\
     \hline
@@ -513,7 +509,7 @@ Explain the design (how you plan to implement your work) of your project. Adjust
     \hline
     Use Case Name & ดูสถานที่จอดรถ (View Parking Status) \\
     \hline
-    Actor & บุคลากร (Staff) / ผู้มาติดต่อ (Visitor) / บุคคลภายนอก(Guest) \\
+    Actor & บุคลากร (Staff) / ผู้มาติดต่อ (Visitor) / ผู้ใช้งานทั่วไป (User) / บุคคลภายนอก(Guest) \\
     \hline
     Goal & เพื่อดูสถานะและตำแหน่งของช่องจอดรถในปัจจุบัน \\
     \hline
@@ -555,7 +551,7 @@ Explain the design (how you plan to implement your work) of your project. Adjust
     \hline
     Use Case Name & จัดการช่องจอดรถรายการโปรด (Manage Favorite Spots) \\
     \hline
-    Actor & บุคลากร (Staff) / ผู้มาติดต่อ (Visitor) / บุคคลภายนอก(Guest) \\
+    Actor & บุคลากร (Staff) / ผู้มาติดต่อ (Visitor) / ผู้ใช้งานทั่วไป (User) \\
     \hline
     Goal & เพื่อเพิ่ม ลบ หรือแก้ไขรายการช่องจอดรถที่ใช้บ่อย เพื่อความสะดวกรวดเร็วในการจอง \\
     \hline
@@ -599,7 +595,7 @@ Explain the design (how you plan to implement your work) of your project. Adjust
     \hline
     Use Case Name & ดูรายการแจ้งเตือน (View Notifications) \\
     \hline
-    Actor & บุคลากร (Staff) / ผู้มาติดต่อ (Visitor) \\
+    Actor & บุคลากร (Staff) / ผู้มาติดต่อ (Visitor) / ผู้ใช้งานทั่วไป (User) \\
     \hline
     Goal & ผู้ใช้จะได้รับการแจ้งเตือนต่างๆ เช่น สถานะการจอง หรือเตือนเวลาจอดเมื่อใกล้หมดเวลา \\
     \hline
@@ -651,11 +647,11 @@ Explain the design (how you plan to implement your work) of your project. Adjust
     \hline
     Use Case Name & ดูรายงาน Report ของลานจอดรถ (View Parking Report) \\
     \hline
-    Actor & Admin (ผู้ดูแลระบบ) \\
+    Actor & Admin (ผู้ดูแลระบบ), SuperAdmin (ผู้ดูแลระบบขั้นสูง) \\
     \hline
     Goal & เพื่อดูภาพรวมสถิติ, รายได้, และสถานะการใช้งานของลานจอดรถสำหรับการวิเคราะห์และบริหารจัดการ \\
     \hline
-    Precondition & Admin ต้องเข้าสู่ระบบเรียบร้อยแล้ว \\
+    Precondition & Admin หรือ  SuperAdmin ต้องเข้าสู่ระบบเรียบร้อยแล้ว \\
     \hline
     Main success scenario & 
     \vspace{-0.5em} 
@@ -712,11 +708,11 @@ Explain the design (how you plan to implement your work) of your project. Adjust
     \hline
     Use Case Name & กำหนดค่าระบบจอดรถ (Configure Parking System Settings) \\
     \hline
-    Actor & Admin (ผู้ดูแลระบบ) \\
+    Actor & Admin (ผู้ดูแลระบบ), SuperAdmin (ผู้ดูแลระบบขั้นสูง) \\
     \hline
     Goal & เพื่อตั้งค่าพารามิเตอร์ต่างๆ ของลานจอดรถ เช่น อัตราค่าบริการ, เวลาเปิด-ปิด และสถานะการเปิดใช้งานของช่องจอดต่างๆ \\
     \hline
-    Precondition & Admin ต้องเข้าสู่ระบบเรียบร้อยแล้ว \\
+    Precondition & Admin หรือ SuperAdmin ต้องเข้าสู่ระบบเรียบร้อยแล้ว \\
     \hline
     Main success scenario & 
     \vspace{-0.5em} 
@@ -724,13 +720,14 @@ Explain the design (how you plan to implement your work) of your project. Adjust
         \item Admin เลือกเมนู "จัดการข้อมูลที่จอดรถ" จากแถบเมนูด้านซ้าย
         \item ระบบแสดงรายการลานจอดรถทั้งหมด (เช่น ลานจอดรถ 14 ชั้น S2, อาคาร N16) พร้อมสถานะปัจจุบัน, ราคา, และความจุ
         \item Admin เลือกกดปุ่ม "แก้ไข" (Edit) ที่รายการที่ต้องการปรับปรุง หรือกด "เพิ่มสถานที่ใหม่"
-        \item ระบบแสดงฟอร์มสำหรับกำหนดค่า:
+        \item ระบบแสดงฟอร์มสำหรับกำหนดค่า
             \begin{itemize}[leftmargin=1.5em, nosep]
                 \item \textbf{ข้อมูลทั่วไป:} ชื่อสถานที่, ที่อยู่
                 \item \textbf{การใช้งาน:} ประเภทพาหนะที่รองรับ (รถยนต์, EV, มอเตอร์ไซค์)
                 \item \textbf{ความจุ (Capacity):} จำนวนช่องจอดสูงสุด
                 \item \textbf{ค่าบริการ:} ราคาต่อชั่วโมง (เช่น 10 บาท/ชม.)
-                \item \textbf{เวลาทำการ:} เวลาเปิด-ปิด (เช่น 08:00 - 20:00 น.)
+                \item \textbf{เวลาทำการ:} เวลาเปิด-ปิด (เช่น 08:00 - 20:00 น.)'
+		\item \textbf{สถานนะลานจอด:} ต้องการปรับเปลี่ยนสถานนะลานจอด
             \end{itemize}
         \item Admin ทำการแก้ไขข้อมูลที่ต้องการเปลี่ยนแปลง
         \item Admin กดปุ่ม "บันทึก"
@@ -743,7 +740,7 @@ Explain the design (how you plan to implement your work) of your project. Adjust
     \vspace{-0.5em}
     \begin{enumerate}[label=\arabic*a., start=3, leftmargin=*, nosep, after=\vspace{0.5em}]
         \item Admin ต้องการปิดปรับปรุงลานจอดชั่วคราว
-        \item Admin กดปุ่ม "ปิด" หรือเปลี่ยนสถานะเป็น "กำลังจะปิด/ปิดใช้งาน"
+        \item Admin กดปุ่ม "แก้ไข" จากนั้นเปลี่ยนสถานะเป็น "ปิดใช้งาน"
         \item ระบบอัปเดตสถานะใน Real-time Dashboard เพื่อไม่ให้ User จองเข้ามาได้
     \end{enumerate}
     \\
@@ -753,6 +750,218 @@ Explain the design (how you plan to implement your work) of your project. Adjust
 \end{tabular}
 \label{tab:usecase_config_system}
 \end{table}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% จัดการสิทธิ์ผู้ใช้งาน %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\clearpage 
+
+\subsubsection{จัดการสิทธิ์ผู้ใช้งาน}
+
+\begin{table}[h!] 
+\centering
+\renewcommand{\arraystretch}{1.3}
+\begin{tabular}{p{3.5cm} p{11cm}}
+    \hline
+    Use Case Name & จัดการสิทธิ์ผู้ใช้งาน (Manage User Permissions) \\
+    \hline
+    Actor & Admin (ผู้ดูแลระบบ), SuperAdmin (ผู้ดูแลระบบขั้นสูง) \\
+    \hline
+    Goal & เพื่อจัดการบัญชีผู้ใช้งาน, กำหนดบทบาท (Role), และอนุมัติคำขอสิทธิ์การเข้าถึงระบบ \\
+    \hline
+    Precondition & Admin หรือ SuperAdmin ต้องเข้าสู่ระบบเรียบร้อยแล้ว \\
+    \hline
+    Main success scenario & 
+    \vspace{-0.5em} 
+    \begin{enumerate}[leftmargin=*, nosep, after=\vspace{0.5em}]
+        \item Admin เลือกเมนู "จัดการผู้ใช้งาน"
+        \item ระบบแสดงรายการผู้ใช้งานทั้งหมด พร้อมสถานะ (เช่น ใช้งานอยู่, ระงับ), วันที่หมดอายุ, และประเภทบัญชี
+        \item Admin ค้นหาชื่อผู้ใช้งานที่ต้องการ หรือใช้ตัวกรอง (Filter) เพื่อดูเฉพาะกลุ่ม เช่น พนักงานภายนอก, พนักงานประจำ
+        \item Admin เลือกกดปุ่ม "แก้ไข" (Edit) ที่รายการที่ต้องการปรับปรุง:
+            \begin{itemize}[leftmargin=1.5em, nosep]
+                \item \textbf{แก้ไขข้อมูล:} ประเภทบัญชี, หรือสถานะบัญชี, วันที่หมดอายุ
+                \item \textbf{ปรับประเภทบัญชี:} เปลี่ยน Role เช่น จาก "Invite  admin" เป็น "รปภ. (Check admin)," แต่ต้องได้รับการอนุมัติจาก Superadmin
+                \item \textbf{ระงับ/ลบ:} เปลี่ยนสถานะเป็น "ระงับ" หรือลบบัญชีออกจากระบบ
+            \end{itemize}
+        \item ระบบแสดงหน้าต่างยืนยันการทำรายการ
+        \item Admin กดยืนยัน
+        \item ระบบบันทึกข้อมูลและส่งข้อมูลอัปเดตสถานะไปยังหน้า "ขออนุมัติสิทธิ"
+    \end{enumerate} 
+    \\
+    \hline
+    Extensions (a) & 
+    \vspace{-0.5em}
+    \begin{enumerate}[label=\arabic*a., start=1, leftmargin=*, nosep, after=\vspace{0.5em}]
+        \item \textbf{กรณีจัดการคำขออนุญาตสิทธิ์ (Permission Request Flow)}
+        \item Superadmin เลือกเมนู "ขออนุญาตสิทธิ์" (Permission Requests)
+        \item ระบบแสดงรายการคำขอที่สถานะเป็น "รออนุมัติ" (Pending)
+        \item Superadmin ตรวจสอบรายละเอียดของผู้ขอใช้สิทธิ์
+        \item Superadmin กดปุ่ม "อนุมัติ" (Approve) หรือ "ไม่อนุมัติ" (Reject)
+        \item ระบบส่งการแจ้งเตือนผลการพิจารณาไปยังผู้ใช้งานคนนั้น
+        \item ระบบบันทึกข้อมูลและส่งข้อมูลอัปเดตสถานะไปยังฐานข้อมูล
+    \end{enumerate}
+    \\
+    \hline
+    Postcondition & สิทธิ์การเข้าใช้งานในระบบต่างๆของผู้ใช้ถูกปรับปรุงให้ตรงกับปัจจุบัน \\
+    \hline
+\end{tabular}
+\label{tab:usecase_manage_permission}
+\end{table}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% ควบคุมไม้กั้นทางเข้า-ออก %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% ดันหัวข้อลงไปหน้าใหม่
+\clearpage 
+
+\subsubsection{ควบคุมไม้กั้นทางเข้า-ออก}
+
+\begin{table}[h!] 
+\centering
+\renewcommand{\arraystretch}{1.3}
+\begin{tabular}{p{3.5cm} p{11cm}}
+    \hline
+    Use Case Name & ควบคุมไม้กั้นทางเข้า-ออก (Control Barrier Gate) \\
+    \hline
+    Actor & Check admin (เจ้าหน้าที่หน้างาน), Admin (ผู้ดูแลระบบ), SuperAdmin (ผู้ดูแลระบบขั้นสูง) \\
+    \hline
+    Goal & เพื่อสั่งการเปิดหรือปิดไม้กั้นด้วยระบบ Manual ในกรณีที่ระบบอัตโนมัติไม่ทำงาน หรือมีเหตุฉุกเฉิน \\
+    \hline
+    Precondition & ต้องเข้าสู่ระบบและมีสิทธิ์ในการเข้าถึงเมนูควบคุมอุปกรณ์ \\
+    \hline
+    Main success scenario & 
+    \vspace{-0.5em} 
+    \begin{enumerate}[leftmargin=*, nosep, after=\vspace{0.5em}]
+        \item เลือกเมนู "สถานะเรียลไทม์"
+        \item ระบบแสดงรายชื่อจุดเข้า-ออกและสถานะปัจจุบันของไม้กั้น (Open/Closed)
+        \item เลือกจุดที่ต้องการควบคุม
+        \item กดปุ่มคำสั่ง "ควบคุมไม้กั้นแบบ Manual"
+        \item ระบบแสดงหน้าต่างยืนยัน และขอให้ระบุเหตุผลในการสั่งการ เช่น ป้ายทะเบียนอ่านไม่ออก, เหตุการณ์ฉุกเฉิน
+        \item ระบบส่งสัญญาณไปยังอุปกรณ์ควบคุมไม้กั้น (Gate Controller) เพื่้อให้ไม้กั้นทำตามคำสั่ง
+        \item ไม้กั้นทำงานตามคำสั่ง
+        \item ระบบบันทึก Action Log ลงในฐานข้อมูล
+    \end{enumerate} 
+    \\
+    \hline
+    Extensions (a) & 
+    \vspace{-0.5em}
+    \begin{enumerate}[label=\arabic*a., start=7, leftmargin=*, nosep, after=\vspace{0.5em}]
+        \item อุปกรณ์ไม้กั้นไม่ตอบสนอง หรือขาดการเชื่อมต่อ (Device Offline)
+        \item ระบบแจ้งเตือน "ไม่สามารถเชื่อมต่ออุปกรณ์ได้ กรุณาตรวจสอบการเชื่อมต่อ"
+        \item ผู้ใช้งานต้องทำการตรวจสอบและ ทำการควบคุมที่หน้างาน
+    \end{enumerate}
+    \\
+    \hline
+    Postcondition & การเปิด-ปิดของ ไม้กั้นเปลี่ยนแปลงตามคำสั่ง และ Action Log ถูกบันทึกไว้ตรวจสอบย้อนหลัง \\
+    \hline
+\end{tabular}
+\label{tab:usecase_control_barrier}
+\end{table}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% จัดการสถานะช่องจอดรถ %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsubsection{จัดการสถานะช่องจอดรถ}
+\begin{table}[h!] 
+\centering
+\renewcommand{\arraystretch}{1.3}
+\begin{tabular}{p{3.5cm} p{11cm}}
+    \hline
+    Use Case Name & จัดการสถานะช่องจอดรถ (Manage Parking Slot Status) \\
+    \hline
+    Actor & Check admin (เจ้าหน้าที่หน้างาน), Admin (ผู้ดูแลระบบ), SuperAdmin (ผู้ดูแลระบบขั้นสูง) \\
+    \hline
+    Goal & เพื่อเปลี่ยนสถานะของช่องจอดรถเฉพาะจุดแบบ Manual\\
+    \hline
+    Precondition & ต้องเข้าสู่ระบบและมีสิทธิ์จัดการสถานะช่องจอดรถ \\
+    \hline
+    Main success scenario & 
+    \vspace{-0.5em} 
+    \begin{enumerate}[leftmargin=*, nosep, after=\vspace{0.5em}]
+        \item เลือกเมนู "สถานะเรียลไทม์"
+        \item ระบบแสดงสถานะของช่องจอดรถทุกช่องจอด
+        \item ผู้ดูแลคลิกเลือกสถานที่ต้องการ และระบุรายละเอียด ชั้น (Floor), โซน (Zone),ช่องจอด (Slot) 
+        \item ผู้ดูแลเลือกสถานะใหม่ที่ต้องการ เช่น เปลี่ยนเป็น "ปิดซ่อมแซม" หรือ "จอง VIP"
+        \item ผู้ใช้งานกดยืนยันการเปลี่ยนสถานะ
+        \item ระบบอัปเดตสถานะในฐานข้อมูล
+    \end{enumerate} 
+    \\
+    \hline
+    Extensions (a) & 
+    \vspace{-0.5em}
+    \begin{enumerate}[label=\arabic*a., start=5, leftmargin=*, nosep, after=\vspace{0.5em}]
+        \item \textbf{กรณีช่องจอดนั้นมีรถจอดอยู่จริง แต่ระบบขึ้นว่าว่าง}
+        \item ผู้ดูแลเลือกเปลี่ยนสถานะเป็น "ไม่ว่าง"
+        \item ระบบบันทึกเวลาเริ่มจอด (Manual Check-in) เพื่อเริ่มคำนวณค่าบริการ พร้อมค่าปรับ
+    \end{enumerate}
+    \vspace{-0.5em}
+    \begin{enumerate}[label=\arabic*b., start=8, leftmargin=*, nosep, after=\vspace{0.5em}]
+        \item การอัปเดตล้มเหลวเนื่องจากมี User กดจองช่องนั้นพอดี
+        \item ระบบแจ้งเตือน "เนื่องจากช่องจอดถูกจองแล้ว ผู้ดูแลต้องแจ้งผู้ใช้งานให้ทราบก่อน!"
+        \item ระบบแสดงหน้าต่างยืนยัน และขอให้ระบุเหตุผลในการสั่งการ
+	\item ผู้ใช้งานกดยืนยันการเปลี่ยนสถานะ
+        \item ระบบอัปเดตสถานะในฐานข้อมูล
+    \end{enumerate}
+    \\
+    \hline
+    Postcondition & สถานะช่องจอดถูกต้องตรงตามความเป็นจริงหน้างาน \\
+    \hline
+\end{tabular}
+\label{tab:usecase_manage_slot_status}
+\end{table}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% มอบสิทธิ์ Visitor ให้ Guest %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% ดันหัวข้อลงไปหน้าใหม่
+\clearpage 
+
+\subsubsection{มอบสิทธิ์ Visitor ให้ Guest}
+
+\begin{table}[h!] 
+\centering
+\renewcommand{\arraystretch}{1.3}
+\begin{tabular}{p{3.5cm} p{11cm}}
+    \hline
+    Use Case Name & มอบสิทธิ์ Visitor ให้ Guest (Grant Visitor Privileges) \\
+    \hline
+    Actor & Invite-Admin, SuperAdmin (ผู้ดูแลระบบขั้นสูง) \\
+    \hline
+    Goal & เพื่อลงทะเบียนและมอบสิทธิ์การเข้าจอดรถชั่วคราวให้กับบุคคลภายนอก (Guest) ที่มาติดต่องานโดยเฉพาะ \\
+    \hline
+    Precondition & เจ้าหน้าที่ต้องเข้าสู่ระบบเรียบร้อยแล้ว และผู้มาติดต่อมีชื่อในระบบลานจอดรถ \\
+    \hline
+    Main success scenario & 
+    \vspace{-0.5em} 
+    \begin{enumerate}[leftmargin=*, nosep, after=\vspace{0.5em}]
+        \item เจ้าหน้าที่เลือกเมนู "จัดการผู้ใช้งาน"
+        \item เจ้าหน้าที่กรอกข้อมูลของ Guest (เช่น ชื่อ-นามสกุล, เบอร์โทรศัพท์, ทะเบียนรถ, และวัตถุประสงค์การมาติดต่อ)
+        \item เจ้าหน้าที่ระบุระยะเวลาที่อนุญาตให้จอด เช่น 2 ชั่วโมง, หรือตลอดวัน
+        \item ระบบตรวจสอบความถูกต้องของข้อมูล
+        \item เจ้าหน้าที่กดยืนยันการมอบสิทธิ์
+	\item ระบบแสดงหน้าต่างยืนยันการทำรายการ
+        \item ระบบบันทึกข้อมูลทะเบียนรถเข้า Whitelist
+        \item ระบบแสดงผลการลงทะเบียนสำเร็จและแสดงรายละเอีนดผู้ใช้งาน สถานะ, วันที่หมดอายุ, และประเภทบัญชี
+        \item ระบบบันทึกข้อมูลและส่งข้อมูลอัปเดตสถานะไปยังหน้า "ขออนุมัติสิทธิ"
+    \end{enumerate} 
+    \\
+    \hline
+    Extensions (a) & 
+    \vspace{-0.5em}
+    \begin{enumerate}[label=\arabic*a., start=4, leftmargin=*, nosep, after=\vspace{0.5em}]
+        \item \textbf{กรณีทะเบียนรถติด Blacklist}
+        \item ระบบแจ้งเตือน "ทะเบียนรถนี้อยู่ในบัญชีดำ ไม่อนุญาตให้เข้าพื้นที่"
+        \item เจ้าหน้าที่แจ้งผู้มาติดต่อและปฏิเสธการมอบสิทธิ์
+    \end{enumerate}
+    \vspace{-0.5em}
+    \begin{enumerate}[label=\arabic*b., start=6, leftmargin=*, nosep, after=\vspace{0.5em}]
+        \item ระบบไม่สามารถอัปเดตสถานะ "อนุมัติสิทธิ"
+        \item ระบบแจ้งเตือนข้อผิดพลาด
+        \item เจ้าหน้าที่แจ้งผู้ที่เกี่ยวข้องและใช้ระบบ ส่วนลดค่าจอด เพื่อแก้ไขระบบที่ไม่สามารถทำงานได้
+    \end{enumerate}
+    \\
+    \hline
+    Postcondition & Guest ได้รับสิทธิ์ในการนำรถเข้าจอดตามระยะเวลาที่กำหนด และข้อมูลการเข้าออกถูกบันทึกไว้ \\
+    \hline
+\end{tabular}
+\label{tab:usecase_grant_visitor}
+\end{table}
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%% Experiments %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
